Improvements to mobile (small screen) layout Move Quick Game button into Play panel Hide bottom left panel (status and analysis) until needed On mobile: Scale down header logo, text and padding using vw units Initially hide collapse-history and collapse-chat on mobile using media query Move unobserve/unexamine buttons to bottom left panel (better for mobile layout). Swap top left and top right panels in order to bring navigation buttons closer to the board Remove chat maximize button Reduce height of player and opponent status panels in order to fit everything into window height Automatically scroll to board, analysis panel, left menu, chat etc when appropriate Fix bug where panel widths not adjusting after screen rotation (landscape to portrait) Set col breakpoints and display properly on all screen sizes from xs, sm, md, lg and xl

--- a/www/css/application.css
+++ b/www/css/application.css
@@ -9,9 +9,15 @@
                                   supported by Chrome and Opera */
 }
 
+/* Fixes problem of body width not updating properly after screen rotate on mobile */
+html, body {
+  overflow-x: hidden;
+}
+
 .chat-text {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
+  min-height: 100%;
   overflow: auto;
   color: rgba(0, 0, 0, 0.65);
   white-space: pre-wrap;
@@ -272,3 +278,9 @@ ul.list-striped > li {
   text-align: center;
 }
 
+@media (max-width: 767px)
+{
+  .collapse-init {
+    display: none;
+  }
+}
